--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "ffmpeg.js": "^4.2.9003",
     "firebase": "^9.22.0",
     "framer-motion": "^9.0.1",
+    "re-resizable": "^6.9.11",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-siriwave": "^2.1.0",
@@ -66,7 +68,9 @@
   },
   "devDependencies": {
     "source-map-loader": "^4.0.1",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.2",
+    "tw-colors": "^2.0.3",
     "typescript": "^4.9.5"
   }
 }
