--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
+    "react-rnd": "^10.4.1",
     "react-scripts": "5.0.1",
     "react-siriwave": "^2.1.0",
+    "react-window-comp": "^1.0.1",
     "snake-case": "^3.0.4",
     "three": "^0.149.0",
     "vocode": "^1.0.33",
